add plugin maven

--- a/pom.xml
+++ b/pom.xml
@@ -73,6 +73,23 @@
                 </dependencies>
             </plugin>
 
+            <plugin>
+                <groupId>com.heroku.sdk</groupId>
+                <artifactId>heroku-maven-plugin</artifactId>
+                <version>3.0.3</version>
+                <configuration>
+                    <includeTarget>false</includeTarget>
+                    <includes>
+                        <include>target/servlet-project-1.0-SNAPSHOT.jar</include>
+                    </includes>
+                    <processTypes>
+                        <web>java -jar target/servlet-project-1.0-SNAPSHOT.jar</web>
+                    </processTypes>
+                </configuration>
+
+
+            </plugin>
+
             <!-- Tomcat plugin -->
             <plugin>
                 <groupId>org.apache.tomcat.maven</groupId>
@@ -82,18 +99,6 @@
                     <path>/</path>
                     <port>8088</port>
                 </configuration>
-            </plugin>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-dependency-plugin</artifactId>
-                <version>3.0.1</version>
-                <executions>
-                    <execution>
-                        <id>copy-dependencies</id>
-                        <phase>package</phase>
-                        <goals><goal>copy-dependencies</goal></goals>
-                    </execution>
-                </executions>
             </plugin>
         </plugins>
     </build>
