--- a/pom.xml
+++ b/pom.xml
@@ -7,6 +7,8 @@
     <groupId>org.example</groupId>
     <artifactId>servlet-project</artifactId>
     <version>1.0-SNAPSHOT</version>
+    <packaging>jar</packaging>
+
 
     <properties>
         <postgresql.version>42.2.18</postgresql.version>
@@ -91,7 +93,7 @@
             </plugin>
 
             <!-- Tomcat plugin -->
-            <plugin>
+           <!-- <plugin>
                 <groupId>org.apache.tomcat.maven</groupId>
                 <artifactId>tomcat7-maven-plugin</artifactId>
                 <version>${tomcat.plugin.version}</version>
@@ -99,7 +101,7 @@
                     <path>/</path>
                     <port>8088</port>
                 </configuration>
-            </plugin>
+            </plugin>-->
         </plugins>
     </build>
 
